--- a/views/home.html
+++ b/views/home.html
@@ -5,97 +5,139 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado liebre</title>
+    <link rel="stylesheet" href="/CSS/styles.css">
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <header>
-        <img src="images\logo-mercado-liebre.svg" alt="Logo de mercado liebre" width="100%" height="200px">
-        <input type="search">
+        <img src="images\logo-mercado-liebre.svg" alt="Logo de mercado liebre" class="logo">
+        <div class="barra">
+            <input type="search" placeholder="Buscar productos, marcas">
+        </div>
+        <button class="botonLupa">
+            <i class="fas fa-search" id="lupa"></i>
+        </button>
+        
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
-        <nav>
+        <nav class="nav-bar">
             <ul>
                 <li><a href="#">Ofertas</a></li>
                 <li><a href="#">Tiendas Oficiales</a></li>
                 <li><a href="#">Vender</a></li>
                 <li><a href="#">Ayuda</a></li><br>
-                <li><a href="#">Creá tu cuenta</a></li>
-                <li><a href="#">Ingresá</a></li>
-                <li><a href="#">Mis compras</a></li>
+                <li id="creaTuCuenta"><a href="#">Creá tu cuenta</a><i class="far fa-address-card"></i></li>
+                <li id="ingresa"><a href="#">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
+                <li id="misCompras"><a href="#">Mis compras</a><i class="fas fa-shopping-basket"></i></li>
             </ul>
         </nav>
+        <div class="burger-menu">
+            <i class="fas fa-bars" id="burger"></i>
+        </div>
     </header>
+    <div class="banner">
+        <img src="\images\img-home-banner.jpg" alt="banner" width="100%">
+    </div>
     <main>
         <section>
-            <h2>Basado en tu última visita</h2>
-            <article>
-                <img src="images\img-cafetera-moulinex.jpg" alt="imagen de la cafetera" width="300px" height="300px">
-                <p>$6770</p>
-                <p>40% OFF</p>
-                <p>Cafetera Moulinex</p>
+            <h2 class="titulares">Basado en tu última visita</h2>
+            <article class="card">
+                <img src="images\img-cafetera-moulinex.jpg" alt="imagen de la cafetera" width="100%" >
+                <div class="card-content">
+                    <div>
+                        <div class="camion"><i class="fas fa-truck"></i></div>
+                    </div>
+                    <p class="precios">$6770</p>
+                    <p class="descuentos">40% OFF</p>
+                    <p class="descripcion">Cafetera Moulinex</p>
+                </div>
             </article>
-            <article>
-                <img src="images\img-macbook-pro-2019.jpg" alt="imagen de MacBook" width="300px" height="300px">
-                <p>$230.000</p>
-                <p>20% OFF</p>
-                <p>MacBook Pro 2019</p>
+            <article class="card">
+                <img src="images\img-macbook-pro-2019.jpg" alt="imagen de MacBook" width="100%">
+                <div class="card-content">
+                    <div class="camion"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$230.000</p>
+                    <p class="descuentos">20% OFF</p>
+                    <p class="descripcion">MacBook Pro 2019</p>
+                </div>
             </article>
-            <article>
-                <img src="\images\img-samsung-galaxy-s10.jpg" alt="imagen del Samsung" width="300px" height="300px">
-                <p>$70.500</p>
-                <p>10% OFF</p>
-                <p>Samsung Galaxy S10</p>
+            <article class="card">
+                <img src="\images\img-samsung-galaxy-s10.jpg" alt="imagen del Samsung" width="100%">
+                <div class="card-content">
+                    <div class="camion"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$70.500</p>
+                    <p class="descuentos">10% OFF</p>
+                    <p class="descripcion">Samsung Galaxy S10</p>
+                </div>
             </article>
-            <article>
-                <img src="images\img-tv-samsung-smart.jpg" alt="imagen del SmartTV" width="300px" height="300px">
-                <p>$23.200</p>
-                <p>5% OFF</p>
-                <p>SmartTV Samsung 43"</p>
+            <article class="card">
+                <img src="images\img-tv-samsung-smart.jpg" alt="imagen del SmartTV" width="100%">
+                <div class="card-content">
+                    <div class="camion"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$23.200</p>
+                    <p class="descuentos">5% OFF</p>
+                    <p class="descripcion">SmartTV Samsung 43"</p>
+                </div>
             </article>
         </section>
         <section>
-            <h2>Sección de Ofertas</h2>
-            <article>
-                <img src="images\img-cafetera-moulinex.jpg" alt="imagen de la cafetera" width="300px" height="300px" >
-                <p>$6770</p>
-                <p>40% OFF</p>
-                <p>Cafetera Moulinex</p>
+            <h2 class="titulares">Sección de Ofertas</h2>
+            <article class="card">
+                <img src="images\img-cafetera-moulinex.jpg" alt="imagen de la cafetera" width="100%" >
+                <div class="card-content">
+                    <div class="camion"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$6770</p>
+                    <p class="descuentos">40% OFF</p>
+                    <p class="descripcion">Cafetera Moulinex</p>
+                </div>
             </article>
-            <article>
-                <img src="images\img-macbook-pro-2019.jpg" alt="imagen de MacBook" width="300px" height="300px" >
-                <p>$230.000</p>
-                <p>20% OFF</p>
-                <p>MacBook Pro 2019</p>
+            <article class="card">
+                <img src="images\img-macbook-pro-2019.jpg" alt="imagen de MacBook" width="100%" >
+                <p class="precios">$230.000</p>
+                <p class="descuentos">20% OFF</p>
+                <p class="descripcion">MacBook Pro 2019</p>
             </article>
-            <article>
-                <img src="\images\img-samsung-galaxy-s10.jpg" alt="imagen del Samsung" width="300px" height="300px">
-                <p>$70.500</p>
-                <p>10% OFF</p>
-                <p>Samsung Galaxy S10</p>
+            <article class="card">
+                <img src="\images\img-samsung-galaxy-s10.jpg" alt="imagen del Samsung" width="100%">
+                <p class="precios">$70.500</p>
+                <p class="descuentos">10% OFF</p>
+                <p class="descripcion">Samsung Galaxy S10</p>
             </article>
-            <article>
-                <img src="images\img-tv-samsung-smart.jpg" alt="imagen del SmartTV" width="300px" height="300px">
-                <p>$23.200</p>
-                <p>5% OFF</p>
-                <p>SmartTV Samsung 43"</p>
+            <article class="card">
+                <img src="images\img-tv-samsung-smart.jpg" alt="imagen del SmartTV" width="100%">
+                <p class="precios">$23.200</p>
+                <p class="descuentos">5% OFF</p>
+                <p class="descripcion">SmartTV Samsung 43"</p>
             </article>
         </section>
     </main>
     <footer>
         <section>
-        <h2>Pagá con tarjeta o en efectivo</h2>
+            <article id="tarjeta">
+                <i class="fas fa-credit-card"></i>
+                <h2>Pagá con tarjeta o en efectivo</h2>
         <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
             puntos de pago. ¡Y siempre es seguro!</p>
-        </section>
-        <section>
-            <h2>Envío gratis desde $ 2.500</h2>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+            </article>
+            <article id="regalo">
+                <i class="fas fa-gift"></i>
+                <h2>Envío gratis desde $ 2.500</h2>
+                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
-        </section>
-        <section>
-            <h2>Seguridad, de principio a fin</h2>
-            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+            </article>
+            <article id="seguridad">
+                <i class="fas fa-user-shield"></i>
+                <h2>Seguridad, de principio a fin</h2>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
-        </section>
-        <section>
+            </article>
+        
+        
+            
+        
+            
+        
             <h2>Copyright © 1999-2020 MercadoLiebre S.R.L.</h2>
         </section>
     </footer>
